<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bnw"
    tools:context=".TimesSet">

    <ImageView
        android:id="@+id/btn_setTimes_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="14dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_WakeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:text="@string/wakeUpTime"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white10_20"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_WakeUp"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/WakeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"

                android:textSize="67dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_setTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/black"
                android:text="@string/Set_time">

            </Button>
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/text_sleepTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:text="@string/sleep_time"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white10_20"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_sleepTime"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/set_Sleep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"

                android:textColor="@color/white"
                android:textSize="67dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_setSleepTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/white"
                android:text="@string/Set_time"
                android:textColor="@color/black">

            </Button>
        </RelativeLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>